--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
       <button type="submit">Send Message</button>
     </form>
     <div class="socials">
-      <a href="https://linkedin.com/in/ashiq" target="_blank">LinkedIn</a>
-      <a href="https://instagram.com/ashiq" target="_blank">Instagram</a>
-      <a href="https://facebook.com/ashiq" target="_blank">Facebook</a>
+      <a href="https://www.linkedin.com/in/muhammed-ashikh-877423149/" target="_blank">LinkedIn</a>
+      <a href="https://www.instagram.com/ashique_palathingal/" target="_blank">Instagram</a>
+      <a href="https://www.facebook.com/ashiqueccpalathingal/" target="_blank">Facebook</a>
     </div>
   </section>
 
