--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
   <section id="contact">
     <h2>Contact Me</h2>
-    <form action="mailto:youremail@example.com" method="post" enctype="text/plain">
+    <form action="mailto:muhammedashiquecc@gmail.com" method="post" enctype="text/plain">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
@@ -158,6 +158,11 @@
       <a href="https://www.facebook.com/ashiqueccpalathingal/" target="_blank">Facebook</a>
     </div>
   </section>
+<div style="text-align:center; margin-top: 20px;">
+    <a href="https://wa.me/919847206318" target="_blank" style="display:inline-block; background:#25D366; color:white; padding:12px 20px; border-radius:6px; text-decoration:none; font-weight:bold;">
+      📱 Chat on WhatsApp
+    </a>
+  </div>
 
   <footer>
     <p>&copy; 2025 Ashiq. All rights reserved.</p>
